gccida/g2/elimination_effects
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3132:35: error: must use 'enum' tag to refer to type 'machine_mode'
void  elimination_effects( rtx x, machine_mode mem_mode) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3154:4: error: expected ';' after expression
rtx v23; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3154:5: error: use of undeclared identifier 'v23'
rtx v23; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3158:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3158:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3162:4: error: expected ';' after expression
rtx v31; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3162:5: error: use of undeclared identifier 'v31'
rtx v31; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3197:1: error: use of undeclared identifier 'v31'
v31 = global_rtl[4]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3201:35: error: use of undeclared identifier 'v31'
if ( rtx == v30->to_rtx && rtx != v31 ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3203:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v33 = ( __int64)v3[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3221:12: error: expected ';' after expression
v3 = ( rtx)v3[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3257:1: error: use of undeclared identifier 'v23'
v23 = v3; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3260:1: error: use of undeclared identifier 'v23'
v23 = v3->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3261:17: error: use of undeclared identifier 'v23'
v4 = *( _WORD *)v23; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3262:17: error: use of undeclared identifier 'v23'
if ( *( _WORD *)v23 == 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3264:84: error: use of undeclared identifier 'v23'
if ( mode_size[*( ( unsigned __int8 *)v3 + 2)] <= mode_size[*( ( unsigned __int8 *)v23 + 2)] 
                                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3266:25: error: use of undeclared identifier 'v23'; did you mean 'v3'?
&& reg_equiv_memory_loc[v23->fld[0].rtuint] ) 
                        ^~~
                        v3
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3134:5: note: 'v3' declared here
rtx v3; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3271:9: error: use of undeclared identifier 'v23'; did you mean 'v3'?
rtint = v23->fld[0].rtint; 
        ^~~
        v3
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3134:5: note: 'v3' declared here
rtx v3; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/reload1.c:3275:26: error: use of undeclared identifier 'v23'
while ( v38->from_rtx != v23 || !v38->can_eliminate ) 
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/elimination_effects/src/obj/reload1.o] Error 1
